feat(turn-of): add turn of White and Black (#18)